@startuml
class Main {
    + List<Physiotherapist> physiotherapists
    + List<Patient> patients
    + Booking bookingSystem
    + main(String[] args)
}

class Physiotherapist {
    - String id
    - String name
    - String phone
    - List<Treatment> timetable
    + getTimetable()
    + addTreatment(Treatment)
}

class Treatment {
    - String name
    - String dateTime
    - Physiotherapist physiotherapist
    - Patient patient
    + getPatient()
}

class Patient {
    - String id
    - String name
    - String phone
    + getName()
}

class Booking {
    - List<Treatment> treatments
    + bookTreatment(String, Patient)
    + cancelTreatment(String, Patient)
}

class ClinicReport {
    - List<Physiotherapist> physiotherapists
    + generateReport()
}

' UML Relationships
Main --> Physiotherapist : "Manages"
Main --> Patient : "Registers"
Main --> Booking : "Handles"
Main --> ClinicReport : "Generates Reports"

ClinicReport --> Physiotherapist : "Accesses"
Physiotherapist "1" *-- "many" Treatment : Provides
Treatment "1" *-- "1" Patient : Booked by
Patient --> Treatment : Receives
@enduml
